<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>us.teaminceptus</groupId>
    <artifactId>novaconomy-parent</artifactId>
    <version>1.2.0-SNAPSHOT</version>

    <name>Novaconomy-Parent</name>
    <description>Multi-Economy Plugin</description>
    <packaging>pom</packaging>

    <properties>
        <java.version>8</java.version>
        <maven.compiler.target>8</maven.compiler.target>
        <maven.compiler.source>8</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <sonar.organization>team-inceptus</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>

        <development>true</development>
    </properties>

    <developers>
        <developer>
            <name>GamerCoder215</name>
            <email>gamercoder215@teaminceptus.us</email>
            <roles>
                <role>Owner</role>
            </roles>
        </developer>
    </developers>

    <inceptionYear>2022</inceptionYear>

    <modules>
        <module>api</module>
        <module>abstraction</module>
        <module>plugin</module>

        <module>1_8_R1</module>
        <module>1_8_R2</module>
        <module>1_8_R3</module>

        <module>1_9_R1</module>
        <module>1_9_R2</module>

        <module>1_10_R1</module>
        <module>1_11_R1</module>
        <module>1_12_R1</module>

        <module>1_13_R1</module>
        <module>1_13_R2</module>

        <module>1_14_R1</module>
        <module>1_15_R1</module>

        <module>1_16_R1</module>
        <module>1_16_R2</module>
        <module>1_16_R3</module>

        <module>1_17_R1</module>

        <module>1_18_R1</module>
        <module>1_18_R2</module>

        <module>1_19_R1</module>
    </modules>

    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <finalName>${project.name}-${project.version}</finalName>
        <defaultGoal>package clean install</defaultGoal>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.1-SNAPSHOT</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>

                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/**/*</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>com.github.cryptomorin:XSeries</artifact>
                            <excludes>
                                <exclude>com/cryptomorin/xseries/XBiome*</exclude>
                                <exclude>com/cryptomorin/xseries/NMSExtras*</exclude>
                                <exclude>com/cryptomorin/xseries/NoteBlockMusic*</exclude>
                                <exclude>com/cryptomorin/xseries/SkullCacheListener*</exclude>
                                <exclude>com/cryptomorin/xseries/XEntity*</exclude>
                                <exclude>com/cryptomorin/xseries/XBlock*</exclude>
                                <exclude>com/cryptomorin/xseries/XMaterial*</exclude>
                                <exclude>com/cryptomorin/xseries/XPotion*</exclude>
                                <exclude>com/cryptomorin/xseries/XTag*</exclude>
                                <exclude>com/cryptomorin/xseries/XItemStack*</exclude>
                                <exclude>com/cryptomorin/xseries/XEnchantment*</exclude>
                                <exclude>com/cryptomorin/xseries/ReflectionUtils*</exclude>
                                <exclude>com/cryptomorin/xseries/SkullUtils*</exclude>
                                <exclude>com/cryptomorin/xseries/particles/**</exclude>
                                <exclude>com/cryptomorin/xseries/messages/**</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <relocations>
                        <relocation>
                            <pattern>com.jeff_media.updatechecker</pattern>
                            <shadedPattern>us.teaminceptus.updatechecker</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>us.teaminceptus.bstats</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>revxrsal.commands</pattern>
                            <shadedPattern>us.teaminceptus.lamp.commands</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.intellij.lang.annotations</pattern>
                            <shadedPattern>us.teaminceptus.jetbrains.annotations</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.jetbrains.annotations</pattern>
                            <shadedPattern>us.teaminceptus.jetbrains.annotations</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.cryptomorin.xseries</pattern>
                            <shadedPattern>us.teaminceptus.xseries</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

	<repositories>
        <repository>
            <id>spigot-repo</id>
            <name>Spigot API Repository</name>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>nms-repo</id>
            <name>NMS Repository</name>
            <url>https://repo.codemc.org/repository/nms/</url>
        </repository>
	</repositories>
</project>
